Add basic application for annotating features in PDF files