@@ -6,6 +6,7 @@ plugins {
 dependencies {
     implementation(project(":lib-core"))
     implementation(project(":lib-client"))
+    implementation(project(":lib-io"))
 }
 
 
@@ -17,13 +18,26 @@ application {
 
 tasks.startScripts {
 
-    // Hack to add the plugins folder to the module path
     doLast {
+        // Hack to add the plugins folder to the module path
         injectPluginsFolderToScript(windowsScript, ";%APP_HOME%\\\\plugins")
         injectPluginsFolderToScript(unixScript, ":\\\$APP_HOME/plugins")
+
+        // Another hack to work around pdfbox not playing nice with java modules (defaultJvmOpts seems broken on both platforms too)
+        val allowReflectionOptions = " --add-opens java.base/java.nio=org.apache.pdfbox.io --add-opens java.base/jdk.internal.ref=org.apache.pdfbox.io"
+        appendValueForParameter(windowsScript, "DEFAULT_JVM_OPTS", allowReflectionOptions)
+        appendValueForQuotedParameter(unixScript, "DEFAULT_JVM_OPTS", allowReflectionOptions)
     }
 }
 
 private fun injectPluginsFolderToScript(scriptFile: File, pluginString: String) {
-    scriptFile.writeText(scriptFile.readText().replace(Regex("(MODULE_PATH=.*)"), "$1$pluginString"))
+    appendValueForParameter(scriptFile, "MODULE_PATH", pluginString)
+}
+
+private fun appendValueForParameter(scriptFile: File, parameterName: String, value: String) {
+    scriptFile.writeText(scriptFile.readText().replace(Regex("(?:set)?($parameterName=.*)"), "$1$value"))
+}
+
+private fun appendValueForQuotedParameter(scriptFile: File, parameterName: String, value: String) {
+    scriptFile.writeText(scriptFile.readText().replace(Regex("(?:set)?($parameterName)=\"(.*)\""), "$1=\"$2$value\""))
 }
